<?xml version="1.0"?>
<package format="2">
  <name>l3x-z</name>
  <version>0.0.0</version>
  <description>The l3x-z package</description>

  <maintainer email="consulting@lxrobotics.com">Alexander Entinger</maintainer>

  <license>Copyright LXRobotics GmbH</license>

  <url type="website">https://107-systems.org/</url>
  <url type="repository">https://github.com/107-systems/l3x-z</url>

  <author email="consulting@lxrobotics.com">Alexander Entinger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export></export>
</package>
