<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_cyphal_bridge</name>
  <version>1.0.0</version>
  <description>ROS2 IO driver package for the L3X-Z hexapod.</description>
  <maintainer email="consulting@lxrobotics.com">Alexander Entinger</maintainer>
  <license>Copyright LXRobotics GmbH</license>

  <url type="website">https://107-systems.org/</url>
  <url type="repository">https://github.com/107-systems/ros2_cyphal_bridge</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros2_heartbeat</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
